# image-ocr-barcode

./: .gitignore  README.md  pyproject.toml  setup.py
src/image_ocr_barcode/: cli.py
tests/: test_scan_utils.py
